@@ -1,6 +1,8 @@
 #### Don't forget to change the version number in configure.ac! ####
 
-27 Jun 2004 if.pat - Minor tweaks to instfetch - Greg Smith
+27 Jun 2004 pr.pat - Performance tweak for PR - Greg Smith
+27 Jun 2004 cckdwrs.pat - Prevent extra writer threads from starting - Greg
+26 Jun 2004 if.pat - Minor tweaks to instfetch - Greg Smith
 26 Jun 2004 gen.pat - Performance tweaks to L,LM,SLA,SLR,ST,STM - Greg Smith
 26 Jun 2004 tlbx2.pat - Fix real mode bug in tlbx.pat - Greg Smith
 26 Jun 2004 iawrap2.pat - Fix performance bug in iawrap.pat - Greg Smith
